# config_stp_wcc

./: .gitignore  COPYRIGHT  README.md  pyproject.toml  requirements.txt
config_pearl_wcc/E2ES/: E2ES_default.toml
config_pearl_wcc/ETC/: WCC_ETC_v1.toml
config_stp_wcc/: __init__.py  config_loader.py
config_stp_wcc/configs/: E2ES_default.toml  WCC_ETC.toml  common_params.toml
config_stp_wcc/support_data/sensors/H2RG18/: H2RG18.ecsv
config_stp_wcc/support_data/sensors/H4RG17/: H4RG17.ecsv
config_stp_wcc/support_data/sensors/ZWO_ASI6200MM/: ZWO_ASI6200MM_Pro_QE_curve.fits
configs/: common_params.toml
configs/ETC/: WCC_ETC_v1.toml
docs/: README.md
notebooks/: README.md
src/config_stp_wcc/: __init__.py
src/config_stp_wcc/configs/: E2ES_default.toml  common_params.toml
support_data/coatings/: temp.csv
support_data/sensors/: temp.csv
support_data/targets/: temp.csv
tests/: test_config_wcc.py  test_configs.py  test_version_consistency.py
